# bank-system

./: .gitignore  Bank.cpp  CMakeLists.txt  Mainmenu.hpp  README.md  User.cpp  User.hpp  account.txt  adminaccount.txt  infodata.txt  transaction.txt
src/: Admin.cpp  Admin.hpp  Bank.hpp  FunctionHub.cpp  FunctionHub.hpp  Mainmenu.cpp  main.cpp
